--- a/notes/package.json
+++ b/notes/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
